--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <h2>Products</h2>
 <div class="row">
     {% for product in products %}
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4 col-sm-6 mb-3">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{{ product['name'] }}</h5>
@@ -19,10 +19,10 @@
     {% endfor %}
 </div>
 {% if recommendations %}
-<h3>Recommended for You</h3>
+<h3 class="mt-4">Recommended for You</h3>
 <div class="row">
     {% for product in recommendations %}
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4 col-sm-6 mb-3">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{{ product['name'] }}</h5>
