--- a/templates/login.html
+++ b/templates/login.html
@@ -13,5 +13,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
-<p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
+<p class="mt-3">Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
 {% endblock %}
